6 switch gap issue: fixed

--- a/style.css
+++ b/style.css
@@ -544,6 +544,15 @@ body {
   position: relative;
 }
 
+.switch6 {
+  height: 146px;
+  /* height: 22.52vh; */
+  width: 260px;
+  /* width: 22.578vw;
+  height: 22.376vh; */
+  position: relative;
+}
+
 .switch4-1,
 .switch4-2 {
   left: 30px;
